# react-native-clusterer

./: .clang-format  .gitignore  CONTRIBUTING.md  Clusterer.podspec  LICENSE  README.md  nitro.json  package-lock.json  package.json  react-native-clusterer.podspec  tsconfig.json
.github/: FUNDING.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/clusterer/: ClustererPackage.kt
android/src/main/java/com/reactnativeclusterer/: ClustererModule.java  ClustererModulePackage.java  ClustererPackage.java
cpp/: HybridClusterer.cpp  HybridClusterer.hpp  SuperclusterHostObject.cpp  SuperclusterHostObject.h  clusterer.cpp  clusterer.h  helpers.cpp  helpers.h  jsiHelpers.cpp  jsiHelpers.hpp  react-native-clusterer.cpp  react-native-clusterer.h  supercluster.hpp
example/: app.json  package-lock.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/clustererexample/: ReactNativeFlipper.java
example/android/app/src/debug/java/com/example/reactnativeclusterer/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/clusterer/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/java/com/clustererexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/example/reactnativeclusterer/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/clustererexample/: ReactNativeFlipper.java
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/: File.swift  Podfile
example/ios/ClustererExample/: AppDelegate.m  AppDelegate.mm  AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/ClustererExample.xcodeproj/: project.pbxproj
example/ios/ClustererExample.xcodeproj/xcshareddata/xcschemes/: ClustererExample.xcscheme
example/ios/ClustererExample.xcworkspace/: contents.xcworkspacedata
example/ios/ClustererExampleTests/: ClustererExampleTests.m
example/src/: App.tsx  Comparison.tsx  GetClusters.tsx  GetTile.tsx  Map.tsx  Point.tsx  Tests.tsx  places.ts  superclustercpp.tsx  superclusterjs.tsx  utils.ts
example/src/test/fixtures/: index.ts  places-z0-0-0-min5.json  places-z0-0-0.json
ios/: Clusterer.h  Clusterer.mm
ios/Clusterer.xcodeproj/: project.pbxproj
src/: Clusterer.nitro.ts  Clusterer.tsx  Supercluster.ts  index.d.ts  index.js  index.ts  index.tsx  types.ts  useClusterer.ts  utils.ts
